--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
         .tabs .rumble-btn {
             background-color: lightgreen;
         }
-        .tabs .twitter-btn {
+        .tabs .x-btn {
             background-color: black;
-            color: white;
         }
         .tabs img {
             height: 20px;
@@ -179,12 +178,12 @@
             return config;
         }
 
+
         async function loadStream(service) {
             const config = await loadConfig();
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
-            const twitterEmbed = `https://twitter.com/${config.x_channel}`;
 
             const iframe = document.getElementById('live-stream');
 
@@ -194,8 +193,6 @@
                 iframe.src = twitchEmbed;
             } else if (service === 'rumble') {
                 iframe.src = rumbleEmbed;
-            } else if (service === 'twitter') {
-                iframe.src = twitterEmbed;
             } else {
                 iframe.src = youtubeEmbed;
 
@@ -234,6 +231,14 @@
             document.getElementById('sidebar').classList.toggle('active');
         }
 
+        async function loadChat() {
+            const config = await loadConfig();
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
+            document.getElementById('twitter-chat-iframe').src = `https://twitframe.com/show?url=https://twitter.com/${config.x_channel}`;
+        }
+
         window.onload = async function() {
             await loadStream();
             await loadChat();
@@ -252,7 +257,6 @@
                 <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
                 <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
                 <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
-                <button class="twitter-btn" onclick="loadStream('twitter')">X</button>
             </div>
             <iframe id="live-stream" src=""></iframe>
         </div>
@@ -261,7 +265,7 @@
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
                 <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
-                <button class="twitter-btn" onclick="switchTab('twitter-chat')"><img src="twitter.png" alt="Twitter Chat"></button>
+                <button class="x-btn" onclick="switchTab('twitter-chat')">X</button>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -283,21 +287,5 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
-    <script>
-        async function loadChat() {
-            const config = await loadConfig();
-            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
-            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
-            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-            document.getElementById('twitter-chat-iframe').src = `https://twitter.com/${config.x_channel}`;
-        }
-
-        window.onload = async function() {
-            await loadStream();
-            await loadChat();
-            switchTab('twitch-chat');
-            await loadMenu();
-        }
-    </script>
 </body>
 </html>
