--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
             height: calc(100vh - 4rem);
             border: none;
         }
+        .twitter-timeline {
+            width: 100%;
+            height: calc(100vh - 4rem);
+            border: none;
+        }
         .sidebar {
             position: fixed;
             top: 0;
@@ -235,7 +240,6 @@
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-            document.getElementById('twitter-chat-iframe').src = `https://twitter.com/${config.x_channel}`;
         }
 
         window.onload = async function() {
@@ -245,6 +249,7 @@
             await loadMenu();
         }
     </script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 <body>
     <main class="main-container">
@@ -276,7 +281,7 @@
                 <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
             </div>
             <div id="twitter-chat" class="tab-content">
-                <iframe class="chat-iframe" src="" id="twitter-chat-iframe"></iframe>
+                <a class="twitter-timeline" href="https://twitter.com/TwitterDev" data-widget-id="your-widget-id">Tweets by @TwitterDev</a> 
             </div>
         </div>
     </main>
