--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
             top: 10px;
             left: 10px;
         }
+        .twitter-iframe {
+            width: 100%;
+            height: 20%;
+            border: none;
+        }
     </style>
     <script>
         async function loadConfig() {
@@ -235,7 +240,18 @@
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-            document.getElementById('twitter-chat-iframe').src = `https://twitter.com/${config.x_channel}`;
+        }
+
+        async function loadTwitterFeed() {
+            const config = await loadConfig();
+            const twitterIframeContainer = document.getElementById('twitter-iframe-container');
+            twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
+            for (let i = 1; i <= 5; i++) {
+                const iframe = document.createElement('iframe');
+                iframe.className = 'twitter-iframe';
+                iframe.src = `https://twitframe.com/show?url=https://twitter.com/${config.x_channel}/status/${i}`;
+                twitterIframeContainer.appendChild(iframe);
+            }
         }
 
         window.onload = async function() {
@@ -243,6 +259,7 @@
             await loadChat();
             switchTab('twitch-chat');
             await loadMenu();
+            await loadTwitterFeed();
         }
     </script>
 </head>
@@ -276,7 +293,7 @@
                 <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
             </div>
             <div id="twitter-chat" class="tab-content">
-                <iframe class="chat-iframe" src="" id="twitter-chat-iframe"></iframe>
+                <div id="twitter-iframe-container"></div>
             </div>
         </div>
     </main>
@@ -286,7 +303,5 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
-<a class="twitter-timeline" href="https://twitter.com/Indulgence82?ref_src=twsrc%5Etfw">Tweets by Indulgence82</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
-
