--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -102,6 +102,9 @@
         .tabs .rumble-btn {
             background-color: lightgreen;
         }
+        .tabs .x-btn {
+            background-color: black;
+        }
         .tabs img {
             height: 20px;
             width: 20px;
@@ -155,6 +158,11 @@
             top: 10px;
             left: 10px;
         }
+        .twitter-iframe {
+            width: 100%;
+            height: 20%;
+            border: none;
+        }
     </style>
     <script>
         async function loadConfig() {
@@ -174,7 +182,6 @@
 
             return config;
         }
-
 
         async function loadStream(service) {
             const config = await loadConfig();
@@ -228,11 +235,31 @@
             document.getElementById('sidebar').classList.toggle('active');
         }
 
+        async function loadChat() {
+            const config = await loadConfig();
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
+        }
+
+        async function loadTwitterFeed() {
+            const config = await loadConfig();
+            const twitterIframeContainer = document.getElementById('twitter-iframe-container');
+            twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
+            for (let i = 1; i <= 5; i++) {
+                const iframe = document.createElement('iframe');
+                iframe.className = 'twitter-iframe';
+                iframe.src = `https://twitframe.com/show?url=https://twitter.com/${config.x_channel}/status/${i}`;
+                twitterIframeContainer.appendChild(iframe);
+            }
+        }
+
         window.onload = async function() {
             await loadStream();
             await loadChat();
             switchTab('twitch-chat');
             await loadMenu();
+            await loadTwitterFeed();
         }
     </script>
 </head>
@@ -254,6 +281,7 @@
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
                 <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
+                <button class="x-btn" onclick="switchTab('twitter-chat')">X</button>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -264,6 +292,9 @@
             <div id="rumble-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
             </div>
+            <div id="twitter-chat" class="tab-content">
+                <div id="twitter-iframe-container"></div>
+            </div>
         </div>
     </main>
     <div id="sidebar" class="sidebar">
@@ -272,20 +303,5 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
-    <script>
-        async function loadChat() {
-            const config = await loadConfig();
-            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
-            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
-            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-        }
-
-        window.onload = async function() {
-            await loadStream();
-            await loadChat();
-            switchTab('twitch-chat');
-            await loadMenu();
-        }
-    </script>
 </body>
 </html>
