--- a/index.html
+++ b/index.html
@@ -158,10 +158,8 @@
             top: 10px;
             left: 10px;
         }
-        .twitter-iframe {
-            width: 100%;
-            height: 20%;
-            border: none;
+        .twitter-tweet {
+            margin-bottom: 1rem;
         }
     </style>
     <script>
@@ -247,15 +245,16 @@
             const twitterIframeContainer = document.getElementById('twitter-iframe-container');
             twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
 
-            const twitterApiUrl = `https://api.tweetpik.com/latest/${config.x_channel}?limit=5`;
+            const rssFeedUrl = `https://twitrss.me/twitter_user_to_rss/?user=${config.x_channel}`;
+            const rss2jsonUrl = `https://api.rss2json.com/v1/api.json?rss_url=${rssFeedUrl}`;
 
-            const tweetResponse = await fetch(twitterApiUrl);
-            const tweets = await tweetResponse.json();
+            const tweetResponse = await fetch(rss2jsonUrl);
+            const tweetData = await tweetResponse.json();
 
-            tweets.forEach(tweet => {
+            tweetData.items.slice(0, 5).forEach(tweet => {
                 const iframe = document.createElement('iframe');
-                iframe.className = 'twitter-iframe';
-                iframe.src = `https://twitframe.com/show?url=https://twitter.com/${config.x_channel}/status/${tweet.id}`;
+                iframe.className = 'twitter-tweet';
+                iframe.src = `https://twitframe.com/show?url=${tweet.link}`;
                 twitterIframeContainer.appendChild(iframe);
             });
         }
