--- a/index.html
+++ b/index.html
@@ -158,93 +158,12 @@
             top: 10px;
             left: 10px;
         }
-        /* Mobile phone frame styling */
-        .mobile-frame {
-            width: 375px; /* iPhone 8 width */
-            height: 667px; /* iPhone 8 height */
-            border: 16px black solid;
-            border-top-width: 60px;
-            border-bottom-width: 60px;
-            border-radius: 36px;
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-            margin: 0 auto;
-            position: relative;
-            overflow: hidden;
-        }
-        .mobile-frame::before {
-            content: '';
-            display: block;
-            position: absolute;
-            top: -48px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 60px;
-            height: 5px;
-            background: black;
-            border-radius: 10px;
-        }
-        .mobile-frame::after {
-            content: '';
-            display: block;
-            position: absolute;
-            bottom: -48px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 35%;
-            height: 40px;
-            background: #ccc;
-            border-radius: 20px;
-        }
-        .mobile-frame iframe {
+        .twitter-iframe {
             width: 100%;
             height: 100%;
             border: none;
         }
     </style>
-</head>
-<body>
-    <main class="main-container">
-        <div class="stream-container">
-            <div class="stream-buttons">
-                <button class="menu-button" onclick="toggleSidebar()">
-                    <img src="menu.png" alt="Menu">
-                </button>
-                <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
-                <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
-                <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
-            </div>
-            <iframe id="live-stream" src=""></iframe>
-        </div>
-        <div class="chat-container">
-            <div class="tabs">
-                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
-                <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
-                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
-                <button class="x-btn" onclick="switchTab('twitter-chat')">X</button>
-            </div>
-            <div id="twitch-chat" class="tab-content active">
-                <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
-            </div>
-            <div id="youtube-chat" class="tab-content">
-                <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
-            </div>
-            <div id="rumble-chat" class="tab-content">
-                <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
-            </div>
-            <div id="twitter-chat" class="tab-content">
-                <div class="mobile-frame">
-                    <div class='sk-ww-twitter-feed' data-embed-id='25442433'></div>
-                </div>
-                <script src='https://widgets.sociablekit.com/twitter-feed/widget.js' async defer></script>
-            </div>
-        </div>
-    </main>
-    <div id="sidebar" class="sidebar">
-        <button class="menu-button" onclick="toggleSidebar()">
-            <img src="menu.png" alt="Menu">
-        </button>
-        <ul id="menu-list"></ul>
-    </div>
     <script>
         async function loadConfig() {
             const response = await fetch('config.json');
@@ -323,12 +242,66 @@
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
 
+        async function loadTwitterFeed() {
+            const config = await loadConfig();
+            const twitterIframeContainer = document.getElementById('twitter-iframe-container');
+            twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
+
+            const twitterUrl = `https://twitter.com/intent/tweet?button_hashtag=${config.x_channel}&ref_src=twsrc%5Etfw`;
+            const iframe = document.createElement('iframe');
+            iframe.className = 'twitter-iframe';
+            iframe.src = twitterUrl;
+            twitterIframeContainer.appendChild(iframe);
+        }
+
         window.onload = async function() {
             await loadStream();
             await loadChat();
             switchTab('twitch-chat');
             await loadMenu();
+            await loadTwitterFeed();
         }
     </script>
+</head>
+<body>
+    <main class="main-container">
+        <div class="stream-container">
+            <div class="stream-buttons">
+                <button class="menu-button" onclick="toggleSidebar()">
+                    <img src="menu.png" alt="Menu">
+                </button>
+                <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
+                <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
+                <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
+            </div>
+            <iframe id="live-stream" src=""></iframe>
+        </div>
+        <div class="chat-container">
+            <div class="tabs">
+                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
+                <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
+                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
+                <button class="x-btn" onclick="switchTab('twitter-chat')">X</button>
+            </div>
+            <div id="twitch-chat" class="tab-content active">
+                <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
+            </div>
+            <div id="youtube-chat" class="tab-content">
+                <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
+            </div>
+            <div id="rumble-chat" class="tab-content">
+                <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
+            </div>
+            <div id="twitter-chat" class="tab-content">
+                <div id="twitter-iframe-container"></div>
+            </div>
+        </div>
+    </main>
+    <div id="sidebar" class="sidebar">
+        <button class="menu-button" onclick="toggleSidebar()">
+            <img src="menu.png" alt="Menu">
+        </button>
+        <ul id="menu-list"></ul>
+    </div>
 </body>
 </html>
