--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -160,7 +160,7 @@
         }
         .twitter-iframe {
             width: 100%;
-            height: 20%;
+            height: 100%;
             border: none;
         }
     </style>
@@ -242,17 +242,26 @@
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
 
-        async function loadTwitterFeed() {
-            const config = await loadConfig();
-            const twitterIframeContainer = document.getElementById('twitter-iframe-container');
-            twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
-            for (let i = 1; i <= 5; i++) {
-                const iframe = document.createElement('iframe');
-                iframe.className = 'twitter-iframe';
-                iframe.src = `https://twitframe.com/show?url=https://twitter.com/${config.x_channel}/status/${i}`;
-                twitterIframeContainer.appendChild(iframe);
-            }
-        }
+		async function loadTwitterFeed() {
+			const config = await loadConfig();
+			const response = await fetch(config.x_id_list);
+			let tweetIds = await response.json();
+
+			// Ensure tweetIds is an array
+			if (!Array.isArray(tweetIds)) {
+				tweetIds = [tweetIds];
+			}
+
+			const twitterIframeContainer = document.getElementById('twitter-iframe-container');
+			twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
+
+			tweetIds.forEach(tweet => {
+				const iframe = document.createElement('iframe');
+				iframe.className = 'twitter-iframe';
+				iframe.src = `https://twitter.com/i/status/${tweet.Tweet_ID}`;
+				twitterIframeContainer.appendChild(iframe);
+				});
+		}
 
         window.onload = async function() {
             await loadStream();
