--- a/index.html
+++ b/index.html
@@ -242,17 +242,31 @@
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
 
-        async function loadTwitterFeed() {
-            const config = await loadConfig();
-            const twitterIframeContainer = document.getElementById('twitter-iframe-container');
-            twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
+		async function loadTwitterFeed() {
+			const config = await loadConfig();
+			const response = await fetch(config.x_id_list);
+			let tweetIds = await response.json();
 
-            const twitterUrl = `https://twitter.com/intent/tweet?button_hashtag=${config.x_channel}&ref_src=twsrc%5Etfw`;
-            const iframe = document.createElement('iframe');
-            iframe.className = 'twitter-iframe';
-            iframe.src = twitterUrl;
-            twitterIframeContainer.appendChild(iframe);
-        }
+			// Ensure tweetIds is an array
+			if (!Array.isArray(tweetIds)) {
+				tweetIds = [tweetIds];
+			}  else {
+				tweetIds.reverse();
+			}
+
+			const twitterIframeContainer = document.getElementById('twitter-iframe-container');
+			twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
+
+			tweetIds.forEach(tweet => {
+				const iframe = document.createElement('iframe');
+				iframe.className = 'twitter-iframe';
+				iframe.src = `https://twitframe.com/show?url=https://twitter.com/i/status/${tweet.Tweet_ID}`;
+				iframe.style.width = "100%";
+				iframe.style.height = "auto";
+				iframe.frameBorder = "0";
+				twitterIframeContainer.appendChild(iframe);
+			});
+		}
 
         window.onload = async function() {
             await loadStream();
@@ -303,5 +317,6 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
+	<iframe src='https://www.juicer.io/api/feeds/indulgence82/iframe' frameborder='0' width='250' height='1000' style='display:block;margin:0 auto;'></iframe>
 </body>
 </html>
