--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         }
         .stream-buttons .youtube-btn,
         .stream-buttons .twitch-btn,
-        .stream-buttons .rumble-btn {
+        .stream-buttons .rumble-btn,
+        .stream-buttons .kick-btn,
+        .stream-buttons .trovo-btn {
             flex: 1;
             padding: 0.5rem;
             margin: 0 0.25rem;
@@ -82,6 +84,12 @@
         }
         .stream-buttons .rumble-btn {
             background-color: lightgreen;
+        }
+        .stream-buttons .kick-btn {
+            background-color: #32CD32;
+        }
+        .stream-buttons .trovo-btn {
+            background-color: #00BFFF;
         }
         .tabs {
             display: flex;
@@ -169,25 +177,38 @@
             const response = await fetch('config.json');
             const config = await response.json();
 
-            const apiKey = config.youtube_api_key; // Add your API key in config.json
+            // Load YouTube live video ID
+            const apiKey = config.youtube_api_key;
             const channelId = config.youtube_channel_id;
 
-            const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
-            const videoResponse = await fetch(apiUrl);
-            const videoData = await videoResponse.json();
+            if (apiKey && channelId) {
+                const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
+                const videoResponse = await fetch(apiUrl);
+                const videoData = await videoResponse.json();
 
-            if (videoData.items.length > 0) {
-                config.youtube_live_video_id = videoData.items[0].id.videoId;
+                if (videoData.items.length > 0) {
+                    config.youtube_live_video_id = videoData.items[0].id.videoId;
+                }
             }
+
+            // Conditionally display buttons
+            if (config.youtube_live_video_id) document.querySelector('.youtube-btn').style.display = 'block';
+            if (config.twitch_channel) document.querySelector('.twitch-btn').style.display = 'block';
+            if (config.rumble_live_id) document.querySelector('.rumble-btn').style.display = 'block';
+            if (config.kick_live_id) document.querySelector('.kick-btn').style.display = 'block';
+            if (config.trovo_live_id) document.querySelector('.trovo-btn').style.display = 'block';
 
             return config;
         }
 
         async function loadStream(service) {
             const config = await loadConfig();
+
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+            const kickEmbed = `https://kick.com/${config.kick_live_id}/embed`;
+            const trovoEmbed = `https://trovo.live/embed/player?streamername=${config.trovo_live_id}`;
 
             const iframe = document.getElementById('live-stream');
 
@@ -197,15 +218,10 @@
                 iframe.src = twitchEmbed;
             } else if (service === 'rumble') {
                 iframe.src = rumbleEmbed;
-            } else {
-                iframe.src = youtubeEmbed;
-
-                iframe.onerror = function() {
-                    iframe.src = twitchEmbed;
-                    iframe.onerror = function() {
-                        iframe.src = rumbleEmbed;
-                    };
-                };
+            } else if (service === 'kick') {
+                iframe.src = kickEmbed;
+            } else if (service === 'trovo') {
+                iframe.src = trovoEmbed;
             }
         }
 
@@ -242,31 +258,31 @@
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
 
-		async function loadTwitterFeed() {
-			const config = await loadConfig();
-			const response = await fetch(config.x_id_list);
-			let tweetIds = await response.json();
+        async function loadTwitterFeed() {
+            const config = await loadConfig();
+            const response = await fetch(config.x_id_list);
+            let tweetIds = await response.json();
 
-			// Ensure tweetIds is an array
-			if (!Array.isArray(tweetIds)) {
-				tweetIds = [tweetIds];
-			}  else {
-				tweetIds.reverse();
-			}
+            // Ensure tweetIds is an array
+            if (!Array.isArray(tweetIds)) {
+                tweetIds = [tweetIds];
+            } else {
+                tweetIds.reverse();
+            }
 
-			const twitterIframeContainer = document.getElementById('twitter-iframe-container');
-			twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
+            const twitterIframeContainer = document.getElementById('twitter-iframe-container');
+            twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
 
-			tweetIds.forEach(tweet => {
-				const iframe = document.createElement('iframe');
-				iframe.className = 'twitter-iframe';
-				iframe.src = `https://twitframe.com/show?url=https://twitter.com/i/status/${tweet.Tweet_ID}`;
-				iframe.style.width = "100%";
-				iframe.style.height = "auto";
-				iframe.frameBorder = "0";
-				twitterIframeContainer.appendChild(iframe);
-			});
-		}
+            tweetIds.forEach(tweet => {
+                const iframe = document.createElement('iframe');
+                iframe.className = 'twitter-iframe';
+                iframe.src = `https://twitframe.com/show?url=https://twitter.com/i/status/${tweet.Tweet_ID}`;
+                iframe.style.width = "100%";
+                iframe.style.height = "auto";
+                iframe.frameBorder = "0";
+                twitterIframeContainer.appendChild(iframe);
+            });
+        }
 
         window.onload = async function() {
             await loadStream();
@@ -284,9 +300,11 @@
                 <button class="menu-button" onclick="toggleSidebar()">
                     <img src="menu.png" alt="Menu">
                 </button>
-                <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
-                <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
-                <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
+                <button class="youtube-btn" style="display:none" onclick="loadStream('youtube')">YouTube</button>
+                <button class="twitch-btn" style="display:none" onclick="loadStream('twitch')">Twitch</button>
+                <button class="rumble-btn" style="display:none" onclick="loadStream('rumble')">Rumble</button>
+                <button class="kick-btn" style="display:none" onclick="loadStream('kick')">Kick</button>
+                <button class="trovo-btn" style="display:none" onclick="loadStream('trovo')">Trovo</button>
             </div>
             <iframe id="live-stream" src=""></iframe>
         </div>
@@ -317,6 +335,5 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
-	<iframe src="https://streamelements.com/Indulgence82/tip" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
